packages/react-native/cpp/derec_ffi.h

typedef struct DeRecError {
  int32_t category;
  int32_t code;
  /**
   * Owned C string. Null on success. Released by [`derec_free_error`].
   */
  char *message;
  /**
   * Valid when `code == DEREC_CODE_NON_OK_STATUS`.
   */
  int32_t peer_status;
  /**
   * Owned C string. Null when not applicable. Released by [`derec_free_error`].
   */
  char *peer_memo;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t expected;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t got;
} DeRecError;
typedef struct DeRecBuffer {
  uint8_t *ptr;
  size_t len;
} DeRecBuffer;
typedef struct CreateContactMessageResult {
  struct DeRecError error;
  struct DeRecBuffer contact_wire_bytes;
  /**
   * Opaque pairing secret key material. See module docs.
   */
  struct DeRecBuffer secret_key_material;
} CreateContactMessageResult;
typedef struct ProducePairRequestMessageResult {
  struct DeRecError error;
  struct DeRecBuffer request_wire_bytes;
  struct DeRecBuffer initiator_contact_message_wire_bytes;
  /**
   * Opaque pairing secret key material. See module docs.
   */
  struct DeRecBuffer secret_key_material;
} ProducePairRequestMessageResult;
typedef struct ExtractPairRequestResult {
  struct DeRecError error;
  uint64_t channel_id;
  /**
   * Inner `PairRequestMessage` proto bytes for chaining into
   * [`produce_pair_response_message`].
   */
  struct DeRecBuffer request_proto_bytes;
} ExtractPairRequestResult;
typedef struct ExtractPairResponseResult {
  struct DeRecError error;
  uint64_t channel_id;
  /**
   * Inner `PairResponseMessage` proto bytes for chaining into
   * [`process_pair_response_message`].
   */
  struct DeRecBuffer response_proto_bytes;
} ExtractPairResponseResult;
/**
 * `shared_key` is populated only on success; empty on peer rejection (see
 * [`crate::interop::ffi::error`]).
 */
typedef struct ProcessPairResponseMessageResult {
  struct DeRecError error;
  struct DeRecBuffer shared_key;
  /**
   * Post-handshake rekey channel id — already validated against the
   * caller's own derivation. Callers MUST atomically rename their local
   * channel record from the pre-rekey id (the one in the contact) to
   * this value. Zero on error.
   */
  uint64_t channel_id;
} ProcessPairResponseMessageResult;
/**
 * Single entry point for all three modes:
 * - `contact_mode == 0` (`INLINE_KEYS`) — keys inlined in contact.
 * - `contact_mode == 1` (`HASHED_KEYS`) — binding hash inlined; keys via PrePair.
 * - `contact_mode == 2` (`NO_KEYS`) — no key material; keys generated on the
 *   fly by the responder when the `PrePairRequest` arrives.
 *
 * `has_nonce == 0` lets the library generate a fresh random `u64`.
 * `has_nonce == 1` uses the supplied `nonce` value verbatim; required for
 * `NO_KEYS` where callers typically pick a small human-typable value.
 *
 * On success `secret_key_material` is populated for `INLINE_KEYS` and
 * `HASHED_KEYS`; it is empty for `NO_KEYS` (no keys exist at
 * contact-creation time).
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct CreateContactMessageResult create_contact_message(uint64_t channel_id,
                                                         int32_t contact_mode,
                                                         const uint8_t *transport_protocols_ptr,
                                                         size_t transport_protocols_len,
                                                         uint32_t has_nonce,
                                                         uint64_t nonce);
/**
 * `communication_info_ptr` may be null / zero-length to indicate no
 * communication info; otherwise it must be serialized [`CommunicationInfo`]
 * proto bytes. `parameter_range_ptr` follows the same convention and
 * carries serialized [`derec_proto::ParameterRange`] bytes.
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProducePairRequestMessageResult produce_pair_request_message(int32_t sender_kind,
                                                                    const uint8_t *transport_protocols_ptr,
                                                                    size_t transport_protocols_len,
                                                                    const uint8_t *contact_message_ptr,
                                                                    size_t contact_message_len,
                                                                    const uint8_t *communication_info_ptr,
                                                                    size_t communication_info_len,
                                                                    const uint8_t *parameter_range_ptr,
                                                                    size_t parameter_range_len);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ExtractPairRequestResult extract_pair_request(const uint8_t *request_ptr,
                                                     size_t request_len,
                                                     const uint8_t *secret_key_material_ptr,
                                                     size_t secret_key_material_len);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ExtractPairResponseResult extract_pair_response(const uint8_t *response_ptr,
                                                       size_t response_len,
                                                       const uint8_t *secret_key_material_ptr,
                                                       size_t secret_key_material_len);
/**
 * `response_proto_ptr` / `response_proto_len` must be the
 * `response_proto_bytes` returned by [`extract_pair_response`].
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProcessPairResponseMessageResult process_pair_response_message(const uint8_t *contact_message_ptr,
                                                                      size_t contact_message_len,
                                                                      const uint8_t *response_proto_ptr,
                                                                      size_t response_proto_len,
                                                                      const uint8_t *secret_key_material_ptr,
                                                                      size_t secret_key_material_len);